src/snapshots/dunspars__api__tests__get_evolution_steps-2.snap
---
source: src/api.rs
expression: applin
---
name: applin
methods: []
evolves_to:
  - name: flapple
    methods:
      - trigger: use-item
        item: tart-apple
        gender: ~
        held_item: ~
        known_move: ~
        known_move_type: ~
        location: ~
        min_level: ~
        min_happiness: ~
        min_beauty: ~
        min_affection: ~
        needs_overworld_rain: ~
        party_species: ~
        party_type: ~
        relative_physical_stats: ~
        time_of_day: ~
        trade_species: ~
        turn_upside_down: ~
    evolves_to: []
  - name: appletun
    methods:
      - trigger: use-item
        item: sweet-apple
        gender: ~
        held_item: ~
        known_move: ~
        known_move_type: ~
        location: ~
        min_level: ~
        min_happiness: ~
        min_beauty: ~
        min_affection: ~
        needs_overworld_rain: ~
        party_species: ~
        party_type: ~
        relative_physical_stats: ~
        time_of_day: ~
        trade_species: ~
        turn_upside_down: ~
    evolves_to: []
  - name: dipplin
    methods: []
    evolves_to:
      - name: hydrapple
        methods: []
        evolves_to: []
